﻿2012-06-12  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #29093: PHP Warning
	* Fixed Bug #28911: DBAL/ADODB Support improvement (Thanks to Tizian Schmidlin)
	* Fixed deprecated functions for TYPO3 4.5

2012-06-11  Nicole Cordes <cordes@cps-it.de>

	* Raised TYPO3 version to 4.5.0
	* Raised Powermail version to 1.7.0-dev

2011-08-08  Alexander Grein <ag@typo3-webagentur.com>

	* Added a Templates for the JavaScript validation
	* Remove plus sign separation for multiple email addresses, because this is also a valid sign in email names
	* Replace cc with bcc in mails to sender/recipients under TYPO3 4.5 using swiftmailer
	* Add feature to disable mandatory validation on server side if the css-class of a field is set to "donotcheckmandatory".
	* Add validation with alpha-w-umlauts and alphanum-w-umlauts
	* Add hook to manipulate pagebrowser
	* Some new features in the TypoScript constants
	* And about 35 fixed bugs!
	* See all changes on forge.typo3.org

2011-03-21  Alex Kellner  <alexander.kellner@in2code.de>, Alexander Grein <ag@typo3-webagentur.com>

	* Bugfix: Filtering input of the Backend User in powermail Backend Module
	* See all changes on forge.typo3.org

2011-02-21  Alex Kellner  <alexander.kellner@in2code.de>, Alexander Grein <ag@typo3-webagentur.com>

	* Release of Powermail 1.6.2
	* Bugfix for redirection back to form on submit
	* Bugfix for Backend Module in IE
	* Some other small fixes
	* See all changes on forge.typo3.org

2011-02-09  Alex Kellner  <alexander.kellner@in2code.de>, Alexander Grein <ag@typo3-webagentur.com>

	* Release of Powermail 1.6.1
	* Bug #13022: Manual update: add jQuery Tools if you use t3jquery
	* Bug #13047: Radio button always shows validation error if not marked as required
	* Bug #13167: Unable to export data as non-admin user
	* Bug #13564: Powermail > Jump to anker on submit is not working
	* Feature #12910: Add a global option for disabling the backend module
	* Feature #13021: constant to include the JS in header