@@ -1,5 +1,6 @@
 ﻿2012-06-12  Nicole Cordes <cordes@cps-it.de>
 
+	* Fixed Task #29156: Replace mysql_* calls (Thanks to Tizian Schmidlin)
 	* Fixed Bug #29093: PHP Warning
 	* Fixed Bug #28911: DBAL/ADODB Support improvement (Thanks to Tizian Schmidlin)
 	* Fixed deprecated functions for TYPO3 4.5
